--- a/HomeWork15/webpack/.gitignore
+++ b/HomeWork15/webpack/.gitignore
@@ -1,12 +1,4 @@
-.DS_Store
+node_modules
+.vscode
 .idea
-*.ai
-*.log
-*.pdf
-*.psd
-*.sublime*
-src/css/*.css
-node_modules/
-dist/
-Thumbs.db
-npm-debug.*
+package-lock.json
